--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,27 +9,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-        />
-
-        <activity android:name=".SecondActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SecondActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-        />
-
-
-
-        <activity android:name=".SplashScreenActivity">
-
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SplashScreenActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FirstTimeActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+            >
+        </activity>
+        <activity android:name=".FirstTimeInfoActivity"></activity>
     </application>
 
 </manifest>
