--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
             >
         </activity>
         <activity android:name=".FirstTimeInfoActivity" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".LogsActivity" />
+        <activity android:name=".DetailActivity"></activity>
     </application>
 
 </manifest>
