--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".FirstTimeInfoActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".LogsActivity" />
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".RecordsActivity"></activity>
     </application>
 
 </manifest>
