Budget Reset Timer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,21 @@
             android:screenOrientation="portrait">
             >
         </activity>
-        <activity android:name=".FirstTimeInfoActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".LogsActivity" />
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".RecordsActivity"></activity>
+        <activity android:name=".FirstTimeInfoActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".HomeActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".LogsActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".DetailActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".RecordsActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" ></activity>
     </application>
 
 </manifest>
