--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.chris.mysqliteproject">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -33,21 +34,27 @@
             android:screenOrientation="portrait">
             >
         </activity>
-        <activity android:name=".FirstTimeInfoActivity"
+        <activity
+            android:name=".FirstTimeInfoActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".HomeActivity"
+        <activity
+            android:name=".HomeActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".LogsActivity"
+        <activity
+            android:name=".LogsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".DetailActivity"
+        <activity
+            android:name=".DetailActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".RecordsActivity"
+        <activity
+            android:name=".RecordsActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait" ></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".BudgetLeftActivity"></activity>
     </application>
 
 </manifest>
