--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,9 @@
             android:name=".RecordsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".BudgetLeftActivity"></activity>
+        <activity android:name=".BudgetLeftActivity" />
+        <activity android:name=".TagsActivity" />
+        <activity android:name=".TagDetailActivity"></activity>
     </application>
 
 </manifest>
