--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,3 +34,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+dependencies {
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+}
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
