--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,12 @@ dependencies {
     implementation "com.opencsv:opencsv:4.0"
     implementation 'com.android.support:design:28.0.0-rc01'
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
+    implementation 'com.ncorti:slidetoact:0.3.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.android.support.constraint:constraint-layout:+'
+    implementation 'com.github.takusemba:spotlight:1.6.1'
+    implementation 'petrov.kristiyan:colorpicker-library:1.1.8'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-}
-dependencies {
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-}
-
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
 }
